# movie-manager

./: .gitignore  Cargo.toml
scripts/: download_imdb_data.rs  file_format_exporter.rs  make_show_db.rs  show_data_search.rs
scripts/make_show_db/: Cargo.toml
scripts/make_show_db/src/: main.rs
src/: app.rs  main.rs  show.rs  util.rs
src/shows/: mod.rs  new_show.rs  show.rs
