[package]
edition = "2021"
name = "make_show_db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
pbr = "1.0.4"
serde = { version = "1.0.140", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1